# Open_Digital_Studio

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.py  build.sh  compile.sh  run.sh  test.sh
APP/: MAIN.cpp
Engine/: CMakeLists.txt
Engine/INC/: Compiler_Intrinsics.hpp  Define.hpp  Global.hpp  Types.hpp
Engine/INC/ALGORITHMS/: Algorithms.hpp  Mask.hpp  strings.hpp
Engine/INC/ALGORITHMS/SIMD/: Dispatcher.hpp  Dynamic_Dispatcher.hpp  Static_Dispatch.hpp
Engine/INC/ALGORITHMS/SIMD/ARCH/X64/AVX/: Load.hpp  Store.hpp  Types.hpp
Engine/INC/ALGORITHMS/SIMD/ARCH/X64/SSE/: Load.hpp  Store.hpp  Types.hpp
Engine/INC/ALLOCATOR/: Function_Allocator.hpp  MASTER_ALLOCATOR.hpp  MEMORY.hpp  THREAD_ALLOCATOR.hpp  mem_internals.hpp
Engine/INC/ALLOCATOR/MASTER_ALLOCATOR/: MASTER_ALLOCATOR.hpp  mem_internals.hpp
Engine/INC/ALLOCATOR/allocator_internal/: common.hpp  memory_pool.hpp  pool_stack.hpp  pool_stack_list.hpp
Engine/INC/DATA_STRUCTURE/: BitBools.hpp  DATA_STRUCTURE.hpp  Dynamic_Array.hpp  Dynamic_bits.hpp  Fixed_list.hpp  Map.hpp  SMID.hpp  Types.hpp  units.hpp
Engine/INC/DATA_STRUCTURE/SIMD/: SIMD_helper_types.hpp
Engine/INC/OS/: OS.hpp  OS_INFO.hpp  OS_MEMORY.hpp  OS_SHELL.hpp  OS_TERMINAL.hpp  OS_WINDOW.hpp
Engine/INC/OS/COMMON/: CPU_ID.hpp  CPU_info.hpp
Engine/INC/OS/LINUX/: LINUX_INFO.hpp  LINUX_MEMORY.hpp  LINUX_SHELL.hpp  LINUX_WINDOW.hpp  LINUX_X11_Platform.hpp
Engine/INC/OS/WINDOWS/: WINDOWS_MEMORY.hpp  WINDOWS_SHELL.hpp
Engine/SRC/ALGORITHMS/: bits.cpp  strings.cpp
Engine/SRC/ALLOCATOR/: Function_allocator.cpp  MASTER_ALLOCATOR.cpp
Engine/SRC/ALLOCATOR/MASTER_ALLOCATOR/: MASTER_ALLOCATOR.cpp
Engine/SRC/ALLOCATOR/allocator_internal/: memory_pool.cpp  pool_stack.cpp  pool_stack_list.cpp
Engine/SRC/DATA_STRUCTURE/: SMID.cpp  dynamic_bits.cpp
Engine/SRC/EVENT/: EVENT.cpp
Engine/SRC/OS/COMMON/: CPU_info.cpp
Engine/SRC/OS/LINUX/: LIINUX_MEMORY.cpp  LINUX_INFO.cpp  LINUX_SHELL.cpp  LINUX_TERMINAL.cpp  LINUX_X11.cpp
Engine/SRC/OS/WINDOWS/: WINDOWS.cpp  WINDOWS_SHELL.cpp
Test/: CMakeLists.txt  Test.cpp  test.cpp
Test/Tests/: Shell_test.cpp
test/: Dynamic_Bit.cpp  Dynamic_Bit.hpp  offset_stack.hpp  temp.txt  test.cpp
test/Allocator/: ALLOCATOR.hpp
